📱 Fixed Session Manager location on Mobile

--- a/app/components/marginals/titlebar/titlebar.module.css
+++ b/app/components/marginals/titlebar/titlebar.module.css
@@ -94,6 +94,10 @@
 	z-index: 10;
 }
 
+.sessionDropdownMobile {
+	right: 21vw;
+}
+
 .sessionWrapper:hover .sessionDropdown {
 	display: block;
 }
